# yarp-devices

./: .gitignore  .travis.yml  AravisGigE_2LogComponent_8hpp_source.html  AravisGigE_8hpp_source.html  BottleExtract_8hpp_source.html  BusLoadMonitor_8hpp_source.html  CMakeLists.txt  CONTRIBUTING.md  CanBusBroker_2LogComponent_8hpp_source.html  CanBusBroker_8hpp_source.html  CanBusBroker__ParamsParser_8h_source.html  CanBusHico_2LogComponent_8hpp_source.html  CanBusHico_8hpp_source.html  CanBusHico__ParamsParser_8h_source.html  CanBusPeak_2LogComponent_8hpp_source.html  CanBusPeak_8hpp_source.html  CanBusPeak__ParamsParser_8h_source.html  CanBusSocket_2LogComponent_8hpp_source.html  CanBusSocket_8hpp_source.html  CanBusSocket__ParamsParser_8h_source.html  CanMessage_8hpp_source.html  CanOpenNode_8hpp_source.html  CanRxTxThreads_8hpp_source.html  CanUtils_8hpp_source.html  CommandBuffer_8hpp_source.html  CuiAbsolute_2LogComponent_8hpp_source.html  CuiAbsolute_8hpp_source.html  CuiAbsolute__ParamsParser_8h_source.html  DeviceMapper_8hpp_source.html  DriveStatusMachine_8hpp_source.html  DumpCanBus_8hpp_source.html  EmcyConsumer_8hpp_source.html  EmulatedControlBoard_2LogComponent_8hpp_source.html  EmulatedControlBoard_8hpp_source.html  EmulatedControlBoard__ParamsParser_8h_source.html  EncoderRead_8hpp_source.html  ExampleRemoteControlBoard_8hpp_source.html  FakeJoint_8hpp_source.html  FakeJoint__ParamsParser_8h_source.html  FutureObserverLib_8hpp_source.html  (+636 more)
examples/cpp/: CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/AravisGigE/: AravisGigE.hpp  CMakeLists.txt  DeviceDriverImpl.cpp  IFrameGrabberImageImpl.cpp
libraries/BodyYarp/: CMakeLists.txt  ICanBusHico.h  ICanBusSharer.h  ICuiAbsolute.h  IPlayback.h  IPlaybackThread.h  IProximitySensors.h  IRunnable.h  ITechnosoftIpos.h
libraries/CanBusSharerLib/: CMakeLists.txt  CanBusSharer.cpp  CanMessage.hpp  CanOpen.cpp  CanOpen.hpp  CanSenderDelegate.cpp  CanSenderDelegate.hpp  CanUtils.cpp  CanUtils.hpp  DriveStatusMachine.cpp  DriveStatusMachine.hpp  EmcyConsumer.cpp  EmcyConsumer.hpp  ICanBusSharer.hpp  ICanMessageNotifier.hpp  ICanSenderDelegate.hpp  NmtProtocol.cpp  NmtProtocol.hpp  PdoProtocol.cpp  PdoProtocol.hpp  SdoClient-inl.hpp  SdoClient.cpp  SdoClient.hpp  SdoSemaphore.cpp  SdoSemaphore.hpp  StateObserver.cpp  StateObserver.hpp
libraries/CanOpenNodeLib/: CMakeLists.txt  CanOpenNode.cpp  CanOpenNode.hpp  DriveStatusMachine.cpp  DriveStatusMachine.hpp  EmcyConsumer.cpp  EmcyConsumer.hpp  NmtProtocol.cpp  NmtProtocol.hpp  PdoProtocol.cpp  PdoProtocol.hpp  SdoClient.cpp  SdoClient.hpp
libraries/ColorDebug/: ColorDebug.hpp
libraries/DeviceMapperLib/: CMakeLists.txt  DeviceMapper.cpp  DeviceMapper.hpp  FutureTask.cpp  FutureTask.hpp  RawDevice.cpp
libraries/DextraRawControlBoardLib/: CMakeLists.txt  DeviceDriverImpl.cpp  DextraRawControlBoard.cpp  DextraRawControlBoard.hpp  IAxisInfoRawImpl.cpp  IControlLimitsRawImpl.cpp  IControlModeRawImpl.cpp  IEncodersRawImpl.cpp  IPositionControlRawImpl.cpp  IPositionDirectRawImpl.cpp  LogComponent.cpp  LogComponent.hpp  README.md  Synapse.cpp  Synapse.hpp
libraries/DextraRawControlboard/: CMakeLists.txt  DextraRawControlboard.cpp  DextraRawControlboard.hpp  IAxisInfoRawImpl.cpp  IControlLimitsRawImpl.cpp  IEncodersTimedRawImpl.cpp  IPositionControlRawImpl.cpp  Synapse.cpp  Synapse.hpp
libraries/DextraRawControlboardLib/: CMakeLists.txt  DeviceDriverImpl.cpp  DextraRawControlboard.cpp  DextraRawControlboard.hpp  IAxisInfoRawImpl.cpp  IControlLimitsRawImpl.cpp  IControlModeRawImpl.cpp  IEncodersRawImpl.cpp  IEncodersTimedRawImpl.cpp  IPositionControlRawImpl.cpp  IPositionDirectRawImpl.cpp  LogComponent.cpp  LogComponent.hpp  README.md  Synapse.cpp  Synapse.hpp
libraries/OneCanBusOneWrapper/: CMakeLists.txt  OneCanBusOneWrapper.cpp  OneCanBusOneWrapper.hpp
libraries/Playback/: CMakeLists.txt  Playback.cpp  Playback.hpp  Playback.ini
libraries/StateObserverLib/: CMakeLists.txt  StateObserver.cpp  StateObserver.hpp
libraries/TrajectoryLib/: CMakeLists.txt  TrapezoidalTrajectory.cpp  TrapezoidalTrajectory.hpp
libraries/TwoCanBusThreeWrappers/: CMakeLists.txt  TwoCanBusThreeWrappers.cpp  TwoCanBusThreeWrappers.hpp
libraries/YarpDeviceMapperLib/: CMakeLists.txt  DeviceMapper.cpp  DeviceMapper.hpp  FutureTask.cpp  FutureTask.hpp  RawDevice.cpp  RawDevice.hpp
libraries/YarpPlugins/: CMakeLists.txt  ICanBusHico.h  ICanBusSharer.h  ICuiAbsolute.h  IProximitySensors.h  ITechnosoftIpos.h  hico_api.h
programs/: CMakeLists.txt
programs/AravisGigEController/: AravisGigEController.py  AravisGigEControllerGUI.py  __main__.py  run.py
programs/GrabberControls2Gui/: CMakeLists.txt  GrabberControls2GuiBackend.py  GrabberControls2GuiGUI.py  run.py
programs/canBusLauncher/: CMakeLists.txt  CanBusLauncher.cpp  CanBusLauncher.hpp  main.cpp
programs/checkCanBus/: CMakeLists.txt  CheckCanBus.cpp  CheckCanBus.hpp  ThreadImpl.cpp  main.cpp
programs/dumpCanBus/: CMakeLists.txt  DumpCanBus.cpp  DumpCanBus.hpp  ThreadImpl.cpp  main.cpp
programs/ec1/: Ec1.cpp  Ec1.hpp  main.cpp
programs/executionCore1/: CMakeLists.txt  ExecutionCore1.cpp  ExecutionCore1.hpp  InCvPort.cpp  InCvPort.hpp  InSrPort.cpp  InSrPort.hpp  main.cpp
programs/grabberControls2Gui/: CMakeLists.txt  GrabberControls2GuiBackend.py  GrabberControls2GuiGUI.py  README.md  run.py
programs/launchCanBus/: CMakeLists.txt  LaunchCanBus.cpp  LaunchCanBus.hpp  main.cpp
programs/launchLocomotion/: CMakeLists.txt  LaunchLocomotion.cpp  LaunchLocomotion.hpp  main.cpp
programs/launchManipulation/: CMakeLists.txt  LaunchManipulation.cpp  LaunchManipulation.hpp  main.cpp
programs/oneCanBusOneWrapper/: CMakeLists.txt  main.cpp
programs/oneTechnosoftIpos/: CMakeLists.txt  OneTechnosoftIpos.cpp  OneTechnosoftIpos.hpp  main.cpp
share/: CMakeLists.txt
test/: $MYVIMRC  CMakeLists.txt  testTechnosoftIpos.cpp
tests/: CMakeLists.txt  FutureObserverLib.hpp  testCanBusSharerLib.cpp  testCanOpenNodeLib.cpp  testDeviceMapperLib.cpp  testStateObserverLib.cpp  testTrajectoryLib.cpp  testYarpDeviceMapperLib.cpp
(+1587 files in other folders)
