# Copyright: Universidad Carlos III de Madrid (C) 2013-2104
# Authors: Juan G. Victores & Raul de Santos Rico

add_subdirectory(CanBusSharerLib)
add_subdirectory(CanOpenNodeLib)
add_subdirectory(DextraRawControlboardLib)
add_subdirectory(StateObserverLib)
add_subdirectory(YarpDeviceMapperLib)
add_subdirectory(YarpPlugins)
