# Copyright: Universidad Carlos III de Madrid (C) 2013-2014
# Authors: Juan G. Victores & Raúl de Santos Rico

add_subdirectory(dumpCanBus)
add_subdirectory(checkCanBus)

add_subdirectory(oneCanBusOneWrapper)

add_subdirectory(launchManipulation)
add_subdirectory(launchLocomotion)

add_subdirectory(recordManipulation)
add_subdirectory(playbackManipulation)

add_subdirectory(recordLocomotion)
add_subdirectory(playbackLocomotion)

