# Copyright: Universidad Carlos III de Madrid (C) 2013-2014
# Authors: Juan G. Victores & Raúl de Santos Rico

add_subdirectory(canBusLauncher)
add_subdirectory(checkCanBus)
add_subdirectory(dumpCanBus)
add_subdirectory(grabberControls2Gui)
add_subdirectory(launchLocomotion)
add_subdirectory(launchManipulation)
add_subdirectory(oneCanBusOneWrapper)
add_subdirectory(sensorReader)
